c/examples/writing-a-c-compiler-tests/tests/chapter_11/invalid_types/conflicting_variable_types.c
long a;

int main(void) {
    /* This declaration refers to the global 'a' variable,
     * but has a conflicting type.
     */
    extern int a;
    return 0;
}